Closed Bug 193918 Opened 23 years ago Closed 22 years ago

pipe should better utilize current segment (rollback write cursor whenever read cursor == write cursor)

Categories

(Core :: XPCOM, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

(Keywords: perf)

Attachments

(1 file, 2 obsolete files)

pipe should better utilize current segment. in other words, we should rollback the write cursor to the beginning of the current segment whenever all data in the pipe has been read. this adjustment can only happen from nsPipe::GetWriteSegment. this should help reduce heap churn, especially over slower connections. i've also noticed some cases where not rolling back the write cursor results in many small reads from the network. see the log files in bug 193017 for instance.
Status: NEW → ASSIGNED
Keywords: perf
Target Milestone: --- → mozilla1.4alpha
Severity: normal → minor
Priority: -- → P5
Target Milestone: mozilla1.4alpha → mozilla1.4beta
Attached patch v1 patch (obsolete) — Splinter Review
Attached patch v1.1 patch (obsolete) — Splinter Review
revised comments.
Attachment #118375 - Attachment is obsolete: true
Attachment #119318 - Flags: review?(bzbarsky)
Attached patch v1.2 patchSplinter Review
bz and i talked about this some over irc and came up with something better. the old patch would have busted OS/2 (symptom of arena allocated buffer segments).
Attachment #119318 - Attachment is obsolete: true
Attachment #119339 - Flags: review?(bzbarsky)
Attachment #119318 - Flags: review?(bzbarsky)
Comment on attachment 119339 [details] [diff] [review] v1.2 patch bz gave r= over IRC
Attachment #119339 - Flags: review?(bzbarsky) → review+
Attachment #119339 - Flags: superreview?(dougt)
Comment on attachment 119339 [details] [diff] [review] v1.2 patch i would flip the test around so that you test against zero first. r=dougt.
Attachment #119339 - Flags: superreview?(dougt) → superreview+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: