fixes bug 193918 "pipe should better utilize current segment (rollback write cursor whenever read cursor == write cursor)" r=dougt sr=bz